# pdf-hash

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test_get_hash_without_metadata.rs
