[package]
name = "pdf-hash"
version = "0.1.0"
edition = "2021"
authors = ["nrskt"]
description = "A command line tool to retrieve PDF hash values."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
pdf = "0.9.0"
sha2 = "0.10.8"
thiserror = "1.0.56"
